--- a/src/youtube/youtube-style.scss
+++ b/src/youtube/youtube-style.scss
@@ -404,6 +404,10 @@ body.sio-video2 {
 }
 
 
+body {
+    transition-duration: 100ms;
+}
+
 body.sio-home {
     @include LeftSidebar;
     @include Header;
