--- a/src/youtube/youtube-style.scss
+++ b/src/youtube/youtube-style.scss
@@ -408,6 +408,13 @@ body {
     transition-duration: 100ms;
 }
 
+body.sio-strict.sio-home {
+    ytd-rich-grid-row {
+        opacity: 0 !important;
+        pointer-events: none !important;
+    }
+}
+
 body.sio-home {
     @include LeftSidebar;
     @include Header;
